# polars-dataset

./: README.md  polars_dataset.py  pyproject.toml
polars_dataset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
